--- a/data/interfaces/default/editShow.tmpl
+++ b/data/interfaces/default/editShow.tmpl
@@ -59,6 +59,17 @@ Note: This will only affect the language of the retrieved metadata file contents
 This <b>DOES NOT</b> allow Sick Beard to download non-english TV episodes!<br />
 <br />
 <br />
+Show language: <select name="showLang" id="showLangSelect">
+#for $k,$v in $common.showLanguages.iteritems():
+	<option value="$k"
+	#if $show.show_lang == $k:
+		selected
+	#end if
+	>$v</option>
+#end for
+</select>
+<br />
+<br />
 Use Season Folders: <input type="checkbox" name="seasonfolders" #if $show.seasonfolders == 1 then "checked=\"checked\"" else ""# /><br /><br />
 Paused: <input type="checkbox" name="paused" #if $show.paused == 1 then "checked=\"checked\"" else ""# /><br /><br />
 
