--- a/data/interfaces/default/home_newShow.tmpl
+++ b/data/interfaces/default/home_newShow.tmpl
@@ -8,6 +8,7 @@
 #set global $statpath="../.."#
 #set global $topmenu="home"#
 #import os.path
+#from sickbeard import common
 
 #include $os.path.join($sickbeard.PROG_DIR, "data/interfaces/default/inc_top.tmpl")
 
@@ -36,6 +37,15 @@
             <select name="tvdbLang" id="tvdbLangSelect">
                 <option value="en" selected="selected">en</option>
             </select><b>*</b>
+            Show language:
+            <select name="showLang" id="showLang">
+            	#for $k,$v in $common.showLanguages.iteritems():
+					<option value="$k"
+					#if $k == 'en':
+						selected 
+					#end if
+					>$v</option>
+				#end for
             <input type="button" id="searchName" value="Search" /><br /><br />
     
             <b>*</b> This will only affect the language of the retrieved metadata file contents and episode filenames.<br />
