--- a/data/interfaces/default/editShow.tmpl
+++ b/data/interfaces/default/editShow.tmpl
@@ -65,19 +65,12 @@ Note: This will only affect the language of the retrieved metadata file contents
 This <b>DOES NOT</b> allow Sick Beard to download non-english TV episodes!<br />
 <br />
 <br />
-Show language: <select name="showLang" id="showLangSelect">
-#for $k,$v in $common.showLanguages.iteritems():
-	<option value="$k"
-	#if $show.show_lang == $k:
-		selected
-	#end if
-	>$v</option>
-#end for
-</select>
-<br />
-<br />
 Use Season Folders: <input type="checkbox" name="seasonfolders" #if $show.seasonfolders == 1 then "checked=\"checked\"" else ""# /><br /><br />
 Paused: <input type="checkbox" name="paused" #if $show.paused == 1 then "checked=\"checked\"" else ""# /><br /><br />
+
+Custom Search Names: <input type="text" name="customSearchNames" id="customSearchNames" value="$show.custom_search_names" size="50" /><br />
+Note: Custom names used to find show. Define some custom names if show can't be found. Custom names should be separated by ",". Keep empty to use default show name (based on metadata language)<br />
+<br />
 
 Air by date: 
 <input type="checkbox" name="air_by_date" #if $show.air_by_date == 1 then "checked=\"checked\"" else ""# /><br />
@@ -85,6 +78,7 @@ Air by date:
 <br /><br />
 <input type="submit" value="Submit" />
 </form>
+
 
 <script type="text/javascript" charset="utf-8">
 <!--
