Updated the help text to reflect current functionality

--- a/data/interfaces/default/editShow.tmpl
+++ b/data/interfaces/default/editShow.tmpl
@@ -61,8 +61,9 @@ Quality:
 <br />
 <br />
 Language: <select name="tvdbLang" id="tvdbLangSelect"></select><br />
-Note: This will only affect the language of the retrieved metadata file contents and episode filenames.<br />
-This <b>DOES NOT</b> allow Sick Beard to download non-english TV episodes!<br />
+Note: For most languages this will only affect the retrieved metadata file contents and episode filnames.<br />
+Support to download non-english TV episodes currently only works for German and French using the Providers
+NzbMatrix, Newzbin and NewzNab
 <br />
 <br />
 Use Season Folders: <input type="checkbox" name="seasonfolders" #if $show.seasonfolders == 1 then "checked=\"checked\"" else ""# /><br /><br />
