--- a/data/interfaces/default/home_newShow.tmpl
+++ b/data/interfaces/default/home_newShow.tmpl
@@ -48,8 +48,8 @@
 				#end for
             <input type="button" id="searchName" value="Search" /><br /><br />
     
-            <b>*</b> This will only affect the language of the retrieved metadata file contents and episode filenames.<br />
-            This <b>DOES NOT</b> allow Sick Beard to download non-english TV episodes!<br />
+            <b>*</b> Note: For most languages this will only affect the retrieved metadata file contents and episode filnames.<br />
+            Support to download non-english TV episodes currently only works for German and French using the Providers NzbMatrix, Newzbin and NewzNab<br />
             <br />
             <div id="searchResults" style="height: 225px; overflow: auto;"></div>
         #end if
