[WORK IN PROGRESS] Started to implement multiple language handling
- pulled @sarakha63 changes in
- added "Same as TVDB Language" option
- added audio_langs to specify multiple languages with the additional information if you're satisfied with that language or if it should keep looking
- added first prototype to manage those language settings to the edit page
- changed generic search to use those multiple languages
- added audio_langs to home screen
- added field to episodes to indicate which language it was snatched in

*TODO*:

- add new Status "UNSATISFIED" and make it trigger a backlog until a satisfied language is found
- change audio_langs column into flags
- add flag column to episodes
- finish language setting ui
- add language setting ui to the last page of the wizard

--- a/data/interfaces/default/home.tmpl
+++ b/data/interfaces/default/home.tmpl
@@ -90,11 +90,11 @@
 
 <table id="showListTable" class="sickbeardTable tablesorter" cellspacing="1" border="0" cellpadding="0">
 
-  <thead><tr><th class="nowrap">Next Ep</th><th>Show</th><th>Network</th><th>Quality</th><th>Downloads</th><th>Active</th><th>Status</th></tr></thead>
+  <thead><tr><th class="nowrap">Next Ep</th><th>Show</th><th>Network</th><th>Quality</th><th>Downloads</th><th>Active</th><th>Language</th><th>Status</th></tr></thead>
   <tfoot>
     <tr>
       <th rowspan="1" colspan="1" align="center"><a href="$sbRoot/home/addShows/">Add Show</a></th>
-      <th rowspan="1" colspan="6"></th>
+      <th rowspan="1" colspan="7"></th>
     </tr>
   </tfoot>
   <tbody>
@@ -168,6 +168,7 @@ $myShowList.sort(lambda x, y: cmp(x.name, y.name))
         </script>
     </td>
     <td align="center"><img src="$sbRoot/images/#if int($curShow.paused) == 0 and $curShow.status != "Ended" then "yes16.png\" alt=\"Y\"" else "no16.png\" alt=\"N\""# width="16" height="16" /></td>
+    <td>$curShow.audio_langs</td>
     <td align="center">$curShow.status</td>
   </tr>
 
