--- a/data/interfaces/default/editShow.tmpl
+++ b/data/interfaces/default/editShow.tmpl
@@ -61,17 +61,96 @@ Quality:
 <br />
 <br />
 Language: <select name="tvdbLang" id="tvdbLangSelect"></select><br />
-Note: For most languages this will only affect the retrieved metadata file contents and episode filnames.<br />
-Support to download non-english TV episodes currently only works for German and French using the Providers
-NzbMatrix, Newzbin and NewzNab
+Note: This will only affect the language of the retrieved metadata file contents and episode filenames.<br />
+This <b>DOES NOT</b> allow Sick Beard to download non-english TV episodes!<br />
 <br />
 <br />
-Use Season Folders: <input type="checkbox" name="seasonfolders" #if $show.seasonfolders == 1 then "checked=\"checked\"" else ""# /><br /><br />
-Paused: <input type="checkbox" name="paused" #if $show.paused == 1 then "checked=\"checked\"" else ""# /><br /><br />
 
+
+Audio language:
+<p>
+    Activate this Checkbox if you're satisfied with this Language. If you leave it empty it download that language but keep looking for the one you're satisfied with
+</p>
+<input type="hidden" name="audioLangs" value="$show.audio_langs" />
+<ul class="audio-lang-select">
+    <li class="audio-language">
+        <select>
+        #for $k,$v in $common.audioLanguages.iteritems():
+        	<option value="$k"
+        	#if $show.audio_lang == $k:
+        		selected
+        	#end if
+        	>$v</option>
+        #end for
+        </select>
+        <input type="checkbox" value="1"/> 
+    </li>
+    <li>
+        <a href="#" class="add-language">Add Language</a>
+    </li>
+</ul>
+
+<script type="text/javascript" charset="utf-8">
+<!--
+\$(document).ready(function(){
+
+    var template = \$(".audio-lang-select li.audio-language").first().clone();
+    \$(".audio-lang-select li.audio-language").remove();
+    
+    \$(\$("input[name='audioLangs']").val().split("|")).each(function(){
+        var parts = this.split(":");
+
+        language = template.clone();
+        language.find("select").val(parts[0]);
+        if(parseInt(parts[1]) == 1)
+            language.find("input:checkbox").attr('checked', true);
+        else
+            language.find("input:checkbox").attr('checked', false);
+
+        \$(".audio-lang-select li").last().before(language);
+    });
+
+    function updateAudioSelectContext(){
+        var languages = \$(".audio-lang-select li.audio-language");
+        if (languages.length > 1) {
+            languages.find("input").css("visibility", "visible");
+        } else {
+            languages.find("input").css("visibility", "hidden").attr("value", "1");
+        }
+    }
+    updateAudioSelectContext();
+
+    var counter = 0;
+    \$(".add-language").click(function(){
+        counter++;
+        var template = \$(".audio-lang-select li.audio-language").first().clone();
+        template.html(template.html().replace(/\[0\]/g, "[" + counter + "]"));
+        \$(".audio-lang-select li.audio-language").last().after(template);
+        updateAudioSelectContext();
+        return false;
+    });
+
+    \$("form[action='editShow']").submit(function(){
+        var languages = \$(".audio-lang-select li.audio-language");
+        audioLangs = [];
+        languages.each(function(i){
+            var language = \$(this);
+            var satisfied = language.find("input:checkbox:checked").length;
+            audioLangs.push(language.find("select").val() + ":" + satisfied);
+        });
+        \$("input[name='audioLangs']").val(audioLangs.join("|"));
+    })
+
+});
+//-->
+</script>
+
+<br />
 Custom Search Names: <input type="text" name="customSearchNames" id="customSearchNames" value="$show.custom_search_names" size="50" /><br />
 Note: Custom names used to find show. Define some custom names if show can't be found. Custom names should be separated by ",". Keep empty to use default show name (based on metadata language)<br />
 <br />
+Use Season Folders: <input type="checkbox" name="seasonfolders" #if $show.seasonfolders == 1 then "checked=\"checked\"" else ""# /><br /><br />
+Paused: <input type="checkbox" name="paused" #if $show.paused == 1 then "checked=\"checked\"" else ""# /><br /><br />
 
 Air by date: 
 <input type="checkbox" name="air_by_date" #if $show.air_by_date == 1 then "checked=\"checked\"" else ""# /><br />
@@ -79,7 +158,6 @@ Air by date:
 <br /><br />
 <input type="submit" value="Submit" />
 </form>
-
 
 <script type="text/javascript" charset="utf-8">
 <!--
