--- a/data/interfaces/default/displayShow.tmpl
+++ b/data/interfaces/default/displayShow.tmpl
@@ -86,7 +86,11 @@ replace with: <b><%=", ".join([Quality.qualityStrings[x] for x in bestQualities]
     <tr><td class="showLegend">Language:</td><td><img src="$sbRoot/images/flags/${show.lang}.png" width="16" height="11" alt="" /> $show.lang</td></tr>
     <tr>
         <td class="showLegend">Audio languages:</td>
-        <td>$show.audio_langs</td>
+        <td>
+            #for $language in $show.getLanguagesList:
+                <img src="$sbRoot/images/flags/${language}.png" alt="$language" width="16" />
+            #end for
+        </td>
     </tr>
     <tr><td class="showLegend">Custom Search Names:</td><td>$show.custom_search_names</td></tr>
     <tr><td class="showLegend">Season Folders: </td><td><img src="$sbRoot/images/#if $show.seasonfolders == 1 then "yes16.png\" alt=\"Y" else "no16.png\" alt=\"N"#" width="16" height="16" /></td></tr>
