--- a/data/interfaces/default/displayShow.tmpl
+++ b/data/interfaces/default/displayShow.tmpl
@@ -144,7 +144,7 @@ Change selected episodes to
         <h2>#if int($epResult["season"]) == 0 then "Specials" else "Season "+str($epResult["season"])#</h2>
     </td>
   </tr>
-  <tr id="season-$epResult["season"]-cols"><th width="1%"><input type="checkbox" class="seasonCheck" id="$epResult["season"]" /></th><th>NFO</th><th>TBN</th><th>Episode</th><th>Name</th><th class="nowrap">Airdate</th><th>Filename</th><th>Status</th><th>Search</th></tr>
+  <tr id="season-$epResult["season"]-cols"><th width="1%"><input type="checkbox" class="seasonCheck" id="$epResult["season"]" /></th><th>NFO</th><th>TBN</th><th>Episode</th><th>Name</th><th class="nowrap">Airdate</th><th>Filename</th><th>Audio Languages</th><th>Status</th><th>Search</th></tr>
         #set $curSeason = int($epResult["season"])
     #end if    
 
@@ -173,6 +173,13 @@ $epLoc[len($show._location)+1:]
 $epLoc
 #end if
 
+    </td>
+    <td class="audio_langs_column">
+        #if len($epResult["audio_langs"]) > 0:
+            #for $language in $epResult["audio_langs"].split("|"):
+                <img src="$sbRoot/images/flags/${language}.png" alt="$language" width="16" />
+            #end for
+        #end if
     </td>
     <td class="status_column">$statusStrings[int($epResult["status"])]</td>
     <td align="center">
