Renamed the columns Languages/Audio Languages into Audio

--- a/data/interfaces/default/home.tmpl
+++ b/data/interfaces/default/home.tmpl
@@ -90,7 +90,7 @@
 
 <table id="showListTable" class="tablesorter" cellspacing="1" border="0" cellpadding="0">
 
-  <thead><tr><th class="nowrap">Next Ep</th><th>Show</th><th>Network</th><th>Quality</th><th>Downloads</th><th>Active</th><th>Language</th><th>Status</th></tr></thead>
+  <thead><tr><th class="nowrap">Next Ep</th><th>Show</th><th>Network</th><th>Quality</th><th>Downloads</th><th>Active</th><th>Audio</th><th>Status</th></tr></thead>
   <tfoot>
     <tr>
       <th rowspan="1" colspan="1" align="center"><a href="$sbRoot/home/addShows/">Add Show</a></th>
@@ -169,9 +169,11 @@ $myShowList.sort(lambda x, y: cmp(x.name, y.name))
     </td>
     <td align="center"><img src="$sbRoot/images/#if int($curShow.paused) == 0 and $curShow.status != "Ended" then "yes16.png\" alt=\"Y\"" else "no16.png\" alt=\"N\""# width="16" height="16" /></td>
     <td>
-        #for $language in $curShow.getLanguagesList:
-            <img src="$sbRoot/images/flags/${language}.png" alt="$language" width="16" />
-        #end for
+        #if len($curShow.getLanguagesList) > 1:
+            #for $language in $curShow.getLanguagesList:
+                <img src="$sbRoot/images/flags/${language}.png" alt="$language" width="16" />
+            #end for
+        #end if
     </td>
     <td align="center">$curShow.status</td>
   </tr>
