--- a/data/interfaces/default/editShow.tmpl
+++ b/data/interfaces/default/editShow.tmpl
@@ -116,17 +116,8 @@ Audio language:
     }
     updateAudioSelectContext();
 
-    var counter = 0;
-    \$(".add-language").click(function(){
-        counter++;
-        var template = \$(".audio-lang-select li.audio-language").first().clone();
-        template.html(template.html().replace(/\[0\]/g, "[" + counter + "]"));
-        \$(".audio-lang-select li.audio-language").last().after(template);
-        updateAudioSelectContext();
-        return false;
-    });
 
-    \$("form[action='editShow']").submit(function(){
+    function updateAudioLanguages(){
         var languages = \$(".audio-lang-select li.audio-language");
         audioLangs = [];
         languages.each(function(i){
@@ -135,6 +126,22 @@ Audio language:
             audioLangs.push(language.find("select").val() + ":" + satisfied);
         });
         \$("input[name='audioLangs']").val(audioLangs.join("|"));
+    }
+    updateAudioLanguages();
+
+    var counter = 0;
+    \$(".add-language").click(function(){
+        counter++;
+        var template = \$(".audio-lang-select li.audio-language").first().clone();
+        template.html(template.html().replace(/\[0\]/g, "[" + counter + "]"));
+        \$(".audio-lang-select li.audio-language").last().after(template);
+        updateAudioSelectContext();
+        updateAudioLanguages();
+        return false;
+    });
+
+    \$(".audio-lang-select").find("input, select").live("change", function(){
+        updateAudioLanguages();
     })
 
 });
